<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="195dp"
        android:layout_marginRight="195dp"
        android:layout_marginBottom="26dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/texto_nombre"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/ednombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/ednombre"
        android:layout_width="321dp"
        android:layout_height="51dp"
        android:layout_marginStart="37dp"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="53dp"
        android:layout_marginRight="53dp"
        android:ems="10"
        android:hint="@string/hint_pelicula"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="305dp"
        android:layout_marginRight="305dp"
        android:layout_marginBottom="26dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/texto_director"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/eddirector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ednombre" />

    <EditText
        android:id="@+id/eddirector"
        android:layout_width="322dp"
        android:layout_height="47dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="53dp"
        android:layout_marginRight="53dp"
        android:ems="10"
        android:hint="@string/hint_Director"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/texto_idioma"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eddirector" />

    <RadioGroup
        android:id="@+id/rdg"
        android:layout_width="351dp"
        android:layout_height="68dp"
        android:layout_marginStart="38dp"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="23dp"
        android:layout_marginRight="23dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">


        <RadioButton
            android:id="@+id/rbespañol"
            android:layout_height="wrap_content"
            android:text="@string/texto_ES" />

        <RadioButton
            android:id="@+id/rbingles"
            android:layout_width="wrap_content"
            android:text="@string/texto_ingles" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="107dp"
        android:layout_height="36dp"
        android:layout_marginStart="37dp"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="267dp"
        android:layout_marginRight="267dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/texto_genero"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rdg" />

    <Spinner
        android:id="@+id/spngenero"
        android:layout_width="318dp"
        android:layout_height="41dp"
        android:layout_marginStart="37dp"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fbtnagregar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clickable="true"
        app:backgroundTint="@color/cardview_light_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spngenero"
        app:srcCompat="@drawable/ic_add_circle_black_24dp" />


</androidx.constraintlayout.widget.ConstraintLayout>